# python-config-parser

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  sonar-project.properties
.github/: build.yaml
.github/workflows/: build.yaml
config_parser/: parser.py  utils.py
config_utils/: __init__.py  utils.py
configutils/: parser.py  utils.py
examples/: basic_config.json  basic_config.yaml  basic_example.py
tests/: parser_test.py  test_config.json  test_config.yaml  test_config.yml  test_parser.py  test_utils.py  utils_test.py
